Added GitHub icon

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                             <figcaption>Linkedin</figcaption>
                         </figure>
                     </a>
+                    <a href="https://github.com/fhaque/" target="_blank">
+                        <figure>
+                            <img src="images/iconmonstr-github-4-240.png">
+                            <figcaption>GitHub</figcaption>
+                        </figure>
+                    </a>
                 </div>
             </section>
         </main>
