Added portfolio project thumbnails and fixed CSS
Added border to CSS of project thumbnails too.

--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
                     </nav>
                     <div id="section-portfolio_gallery_content">
                         <p>More projects to come...</p>
-                        <a href="#">
+                        <a href="https://github.com/fhaque/mean-chatty" target="_blank">
                             <figure>
-                                <div style="background-image: url('http://via.placeholder.com/150x150')"> </div>
+                                <div style="background-image: url('images/mean_chatty_screenshot.png')"> </div>
                                 <figcaption>Chat App</figcaption>
+                            </figure>
+                        </a>
+                        <a href="https://github.com/fhaque/hackeryou-evaluation" target="_blank">
+                            <figure>
+                                <div style="background-image: url('images/hackeryou_evaluation_challenge_screenshot.png')"> </div>
+                                <figcaption>Image to Website Conversion</figcaption>
                             </figure>
                         </a>
                     </div>
