Fixed portfolio CSS and figure description

--- a/index.html
+++ b/index.html
@@ -42,13 +42,22 @@
                         <a href="https://github.com/fhaque/mean-chatty" target="_blank">
                             <figure>
                                 <div style="background-image: url('images/mean_chatty_screenshot.png')"> </div>
-                                <figcaption>Chat App</figcaption>
+                                <figcaption>
+                                    <span class="section-portfolio_gallery_content_fig-title">Chat App:</span> a demo web app that allows file uploads and chatting using: 
+                                    <ul>
+                                        <li>ExpressJS, Node</li>
+                                        <li>Mongoose, MongoDB</li>
+                                        <li>Websockets (socket.io)</li>
+                                    </ul>
+                                </figcaption>
                             </figure>
                         </a>
                         <a href="https://github.com/fhaque/hackeryou-evaluation" target="_blank">
                             <figure>
                                 <div style="background-image: url('images/hackeryou_evaluation_challenge_screenshot.png')"> </div>
-                                <figcaption>Image to Website Conversion</figcaption>
+                                <figcaption>
+                                    <span class="section-portfolio_gallery_content_fig-title">Image to Website Conversion:</span> HackerYou's Technical Challenge for entrance. Convert a client image into HTML/CSS.
+                                </figcaption>
                             </figure>
                         </a>
                     </div>
