--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <div id="section-about_thumbnail-gallery">
                 </div>
                 <div id="section-about_description">
+                    Hi! I am an engineer and physicist who is deeply curious about the world and loves to learn.
+                    Currently, I'm interested in learning about development (web and software), product management, and usability.
+                    Also, I love to dance salsa and climb!
                 </div>
             </section>
             <section id="section-portfolio">
